APIs for modifying fw config and generating helm values for nanny and firewall.
