# python/api/src/araali/api.py
@@ -2,6 +2,7 @@ from __future__ import print_function
 
 import datetime
 import requests
+import json
 
 from . import utils
 
@@ -19,6 +20,20 @@ class API:
         if g_debug: print(self.host, self.headers, endpoint)
         rc = requests.get("%s/%s" % (self.host, endpoint), params=data, headers=self.headers)
         if g_debug: print(rc.request.url)
+        if rc.status_code != 200:
+            print("*** REST api error: %s" % rc.status_code)
+        return rc.json(), 0 if rc.status_code == 200 else rc.status_code
+
+    def post(self, endpoint, data):
+        self.headers["Content-Type"] = "application/json"
+        if g_debug:
+            print(self.host, self.headers, endpoint)
+
+        rc = requests.post("%s/%s" % (self.host, endpoint),
+                           data=data, headers=self.headers)
+        if g_debug:
+            print(rc.request.url)
+            print(rc.json())
         if rc.status_code != 200:
             print("*** REST api error: %s" % rc.status_code)
         return rc.json(), 0 if rc.status_code == 200 else rc.status_code
@@ -111,7 +126,7 @@ class API:
         ret, status = self.get("api/v2/listLinks", data)
         return ret.get("links", []), status
 
-    def get_insights(self, zone=None, tenant=None):
+    def get_insights(self, zone, tenant=None):
         """Fetches insights
             Usage: insights, status = api.get_insights()
         """
@@ -126,3 +141,84 @@ class API:
 
         ret, status = self.get("api/v2/listInsights", data)
         return ret["insights"], status
+
+    def get_fw_config(self, zone, tenant=None):
+        """Fetches firewall knobs enabled for a tenant in the zone
+            Usage: knobs, status = api.get_fw_config()
+        """
+        data = {}
+        if tenant is None:
+            if utils.cfg["tenant"]:
+                data["tenant_id"] = utils.cfg["tenant"]
+        else:
+            data["tenant_id"] = tenant
+        data["zone"] = zone
+
+        if g_debug:
+            print(data)
+
+        ret, status = self.get("api/v2/getFirewallConfig", data)
+        return ret["knobs"], status
+
+    def update_fw_config(self, zone, tenant=None, data_file_location=None):
+        """Update firewall knobs for a tenant in the zone
+            Usage: status = api.update_fw_config()
+        """
+
+        json_file_location = "/tmp/fw_cfg.json"
+        if data_file_location:
+            json_file_location = data_file_location
+
+        json_data = {}
+        with open(json_file_location) as json_file:
+            json_data = json.load(json_file)
+        if g_debug:
+            print(json_data)
+
+        data = {}
+        if tenant is None:
+            if utils.cfg["tenant"]:
+                data["tenant_id"] = utils.cfg["tenant"]
+        else:
+            data["tenant_id"] = tenant
+        data["zone"] = zone
+        data["knobs"] = json_data
+
+        json_dump = json.dumps(data, indent=4)
+
+        if g_debug:
+            print(data)
+            print(json_dump)
+
+        ret, status = self.post("api/v2/updateFirewallConfig", json_dump)
+        return status
+
+    def get_helm_values(self, workload_name, nanny=None, tenant=None):
+        """Fetches helm values for nanny/controller or firewall chart
+            Usage: values_yaml = api.get_helm_values()
+        """
+        data = {}
+        if tenant is None:
+            if utils.cfg["tenant"]:
+                data["tenant.id"] = utils.cfg["tenant"]
+        else:
+            data["tenant.id"] = tenant
+        data["workload_name"] = workload_name
+
+        if nanny is None:
+            data["yaml_type"] = "1"
+        else:
+            data["yaml_type"] = "2"
+
+        if g_debug:
+            print(data)
+
+        ret, status = self.get("api/v2/createFortifyYaml", data)
+        if g_debug:
+            print(ret)
+
+        if "code" in ret["response"] and ret["response"]["code"] != 0:
+            print("error ", ret["response"]["message"])
+            return ""
+
+        return ret["workload_yaml"]
